tests/snapshots/execution_spec__batching-default.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Post {
  body: String
  id: Int
  title: String
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
