tests/snapshots/execution_spec__caching-gql-args.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://example.com", batch: {delay: 1, headers: [], maxSize: 1000}) {
  query: Query
}

input Dummy {
  list: [Int]
}

type Bar {
  id: Int!
}

type Query @cache(maxAge: 3000) {
  bar(dummy: Dummy, flag: Boolean!, id: Int!): Bar @http(path: "/bar?id={{args.id}}&flag={{args.flag}}")
}
