tests/snapshots/execution_spec__caching-gql-parent-null.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://example.com", batch: {delay: 1, headers: [], maxSize: 1000}) {
  query: Query
}

type Bar {
  id: Int!
}

type Query @cache(maxAge: 3000) {
  bars: [Bar] @http(path: "/bars")
}
