tests/snapshots/execution_spec__caching-gql-parent-obj.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  flag: Boolean
  foo: Foo
  id: [BarId]
}

type BarId {
  bid: Int
}

type Foo {
  id: Int
}

type Query {
  bars: [Bar]
}

schema {
  query: Query
}
