tests/snapshots/execution_spec__call-mutation.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

type Mutation {
  attachPostToFirstUser(postId: Int, userId: Int): User
  attachPostToUser(postId: Int!, userId: Int!): User
  insertMockedPost(input: PostInput): Post
  insertPost(input: PostInput): Post
  insertPostToFirstUser(input: PostInputWithoutUserId, userId: Int): Post
  insertPostToUser(input: PostInputWithoutUserId!, userId: Int!): Post
}

scalar PhoneNumber

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

input PostInput {
  body: String
  title: String
  userId: Int
}

input PostInputWithoutUserId {
  body: String
  title: String
  userId: Int
}

type Query {
  firstUser: User
  postFromUser(userId: Int!): Post
}

scalar Url

type User {
  id: Int
  name: String
  posts(userId: Int): [Post]
}

schema {
  query: Query
  mutation: Mutation
}
