tests/snapshots/execution_spec__grpc-error.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type NewsData {
  news: [News]!
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

scalar PhoneNumber

type Query {
  news: NewsData!
  newsById(news: NewsInput!): News!
}

scalar Url

schema {
  query: Query
}
